[gd_scene load_steps=33 format=3 uid="uid://bqvkv3bnnfoqb"]

[ext_resource type="Script" path="res://throwable.gd" id="1_ncn2h"]
[ext_resource type="Texture2D" uid="uid://do3m018h26vf7" path="res://Assets/player sprites/arms n bows/projectileConsumables/battery.png" id="2_h8r3n"]
[ext_resource type="Texture2D" uid="uid://xqvc8bn2thiq" path="res://Assets/player sprites/arms n bows/projectileConsumables/Brick.png" id="3_u63yg"]
[ext_resource type="Texture2D" uid="uid://bswtlfaok1ch4" path="res://Assets/player sprites/arms n bows/projectileConsumables/fireThrowable GrapeJuice.png" id="4_vgnwc"]
[ext_resource type="Texture2D" uid="uid://cjkx5jddknf0q" path="res://transparent.png" id="5_8iumn"]
[ext_resource type="Texture2D" uid="uid://cxg4ntvke8rim" path="res://Assets/player sprites/arms n bows/projectileConsumables/waterbaloon.png" id="5_ae3uh"]
[ext_resource type="Texture2D" uid="uid://bve1io4y21q4j" path="res://Assets/player sprites/arms n bows/projectileConsumables/elecChain.png" id="6_euujd"]
[ext_resource type="Texture2D" uid="uid://q3mjg78ks74v" path="res://Assets/player sprites/arms n bows/projectileConsumables/bottleShards/sprite_0.png" id="6_ojngg"]
[ext_resource type="Texture2D" uid="uid://bcrchwexbkkqc" path="res://Assets/player sprites/arms n bows/projectileConsumables/bottleShards/sprite_1.png" id="7_vmq1o"]
[ext_resource type="Texture2D" uid="uid://66u5l26tpy10" path="res://Assets/player sprites/arms n bows/projectileConsumables/bottleShards/sprite_2.png" id="8_jpggb"]
[ext_resource type="Texture2D" uid="uid://dm33ome7dgf1h" path="res://Assets/player sprites/arms n bows/projectileConsumables/bottleShards/sprite_3.png" id="9_id6xq"]
[ext_resource type="Texture2D" uid="uid://c81t575vktgog" path="res://Assets/player sprites/arms n bows/projectileConsumables/bottleShards/sprite_4.png" id="10_mqlpa"]
[ext_resource type="Texture2D" uid="uid://b8ug8b75j7673" path="res://Assets/player sprites/arms n bows/projectileConsumables/bottleShards/sprite_5.png" id="11_aw7ri"]
[ext_resource type="PackedScene" uid="uid://dbr0r2qs3vmfj" path="res://shock_sphere.tscn" id="14_x8c2f"]
[ext_resource type="Texture2D" uid="uid://t47ph3edovg4" path="res://Assets/player sprites/arms n bows/projectileConsumables/notif.png" id="15_w3ip8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5kcn0"]
radius = 8.0

[sub_resource type="SpriteFrames" id="SpriteFrames_a5j2n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h8r3n")
}],
"loop": false,
"name": &"Battery",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_u63yg")
}],
"loop": true,
"name": &"brick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_vgnwc")
}],
"loop": true,
"name": &"fireBottle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.4,
"texture": ExtResource("5_8iumn")
}],
"loop": true,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ae3uh")
}],
"loop": true,
"name": &"waterBaloon",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_c44dd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_7lj8k"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_xk0fq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.4375, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_w0u1w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.492188, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_8rn7c"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.507813, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_3hlij"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.46875, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_aaa21"]
_data = [Vector2(0, 0.115789), 0.0, 1.0386, 0, 0, Vector2(0.225275, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.61684, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_vng0e"]
offsets = PackedFloat32Array(0.108738, 0.345631, 0.714563, 1)
colors = PackedColorArray(1, 0.945098, 0, 1, 1, 0.407843, 0.105882, 1, 0.670588, 0.329412, 0, 0.756863, 0.450648, 0.450648, 0.450648, 0.235294)

[sub_resource type="Curve" id="Curve_htacv"]
min_value = -1.0
max_value = 360.0
_data = [Vector2(0, 333.4), 0.0, 44.4599, 0, 0, Vector2(1, 128.2), -537.912, 488.188, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_y7rei"]
min_value = 0.99
max_value = 30.57
_data = [Vector2(0, 24.9654), 0.0, 0.0, 0, 0, Vector2(0.3, -5), 189.937, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_yctom"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0.0273973, 115.789), 0.0, -1014.32, 0, 0, Vector2(0.821918, -27.3684), -307.368, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_c0bw5"]
_data = [Vector2(0, 0.463158), 0.0, 2.22293, 0, 0, Vector2(1, 0.0526316), -1.42895, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_8rmkc"]
offsets = PackedFloat32Array(0.0103093, 0.742268, 1)
colors = PackedColorArray(0.286275, 0.388235, 0.878431, 1, 0.338317, 0.432843, 0.887296, 0.927083, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_24t2s"]
radius = 35.3553

[sub_resource type="CircleShape2D" id="CircleShape2D_vpur6"]
radius = 71.007

[node name="throwable" type="Area2D"]
collision_layer = 512
collision_mask = 514
script = ExtResource("1_ncn2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5kcn0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.921569)
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_a5j2n")
animation = &"fireBottle"
autoplay = "Battery"

[node name="bottleShard1" type="CPUParticles2D" parent="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(1, -6)
emitting = false
amount = 1
one_shot = true
texture = ExtResource("6_ojngg")
spread = 180.0
initial_velocity_min = 37.97
initial_velocity_max = 37.97
angular_velocity_min = -127.59
angular_velocity_max = 127.59
scale_amount_curve = SubResource("Curve_c44dd")

[node name="bottleShard2" type="CPUParticles2D" parent="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(1, -4)
emitting = false
amount = 1
one_shot = true
texture = ExtResource("7_vmq1o")
spread = 180.0
initial_velocity_min = 37.97
initial_velocity_max = 75.94
angular_velocity_min = -164.05
angular_velocity_max = 72.91
scale_amount_curve = SubResource("Curve_7lj8k")

[node name="bottleShard3" type="CPUParticles2D" parent="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(-1, -1)
emitting = false
amount = 1
one_shot = true
texture = ExtResource("8_jpggb")
spread = 180.0
initial_velocity_min = 25.32
initial_velocity_max = 63.29
angular_velocity_min = -164.05
angular_velocity_max = 127.59
scale_amount_curve = SubResource("Curve_xk0fq")

[node name="bottleShard4" type="CPUParticles2D" parent="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(2, 1)
emitting = false
amount = 1
one_shot = true
texture = ExtResource("9_id6xq")
spread = 180.0
initial_velocity_min = 37.97
initial_velocity_max = 88.61
angular_velocity_min = -145.82
angular_velocity_max = 127.59
scale_amount_curve = SubResource("Curve_w0u1w")

[node name="bottleShard5" type="CPUParticles2D" parent="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(26, 10)
emitting = false
amount = 1
one_shot = true
texture = ExtResource("10_mqlpa")
spread = 180.0
initial_velocity_min = 29.07
initial_velocity_max = 130.33
angular_velocity_min = -81.4
angular_velocity_max = 109.37
scale_amount_curve = SubResource("Curve_8rn7c")

[node name="bottleShard6" type="CPUParticles2D" parent="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(1, 6)
emitting = false
amount = 1
one_shot = true
texture = ExtResource("11_aw7ri")
spread = 180.0
initial_velocity_min = 25.32
initial_velocity_max = 63.29
angular_velocity_min = -91.14
angular_velocity_max = 92.49
damping_min = 0.1
damping_max = 0.11
scale_amount_curve = SubResource("Curve_3hlij")

[node name="fire_particles" type="CPUParticles2D" parent="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(0, -8)
emitting = false
amount = 30
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, -30)
initial_velocity_max = 24.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 5.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_aaa21")
color_ramp = SubResource("Gradient_vng0e")

[node name="fireExplosion" type="CPUParticles2D" parent="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(0, 2)
emitting = false
amount = 30
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 1.0
angular_velocity_max = 5.13
angular_velocity_curve = SubResource("Curve_htacv")
linear_accel_min = -4.26
linear_accel_max = 57.66
linear_accel_curve = SubResource("Curve_y7rei")
scale_amount_min = 5.0
scale_amount_max = 15.68
scale_amount_curve = SubResource("Curve_aaa21")
color_ramp = SubResource("Gradient_vng0e")

[node name="wetParticles" type="CPUParticles2D" parent="AnimatedSprite2D"]
z_index = 9
position = Vector2(-3, 5)
scale = Vector2(1.5, 1.5)
emitting = false
amount = 30
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(3.5, 8)
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 90)
initial_velocity_max = 20.0
angular_velocity_max = 395.38
linear_accel_min = -2.0
linear_accel_max = 10.0
linear_accel_curve = SubResource("Curve_yctom")
scale_amount_min = 5.0
scale_amount_max = 7.0
scale_amount_curve = SubResource("Curve_c0bw5")
color = Color(0.219608, 0.341176, 0.831373, 0.878431)
color_ramp = SubResource("Gradient_8rmkc")

[node name="PickUpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_24t2s")

[node name="bigArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="bigArea"]
shape = SubResource("CircleShape2D_vpur6")

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(6, 0)

[node name="chain1" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_right = 5.0
offset_bottom = 3.0
grow_vertical = 2
texture = ExtResource("6_euujd")
expand_mode = 2
stretch_mode = 1

[node name="chain2" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_right = 5.0
offset_bottom = 3.0
grow_vertical = 2
texture = ExtResource("6_euujd")
expand_mode = 2
stretch_mode = 1

[node name="chain3" type="TextureRect" parent="."]
visible = false
texture_filter = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_right = 5.0
offset_bottom = 3.0
grow_vertical = 2
texture = ExtResource("6_euujd")
expand_mode = 2
stretch_mode = 1

[node name="Area2D" parent="." instance=ExtResource("14_x8c2f")]

[node name="notifSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -16)
texture = ExtResource("15_w3ip8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="PickUpArea" to="." method="_on_pick_up_area_body_entered"]
[connection signal="body_exited" from="PickUpArea" to="." method="_on_pick_up_area_body_exited"]
[connection signal="body_entered" from="bigArea" to="." method="_on_big_area_body_entered"]
[connection signal="body_exited" from="bigArea" to="." method="_on_big_area_body_exited"]
